tests/snapshots/conformance__n_object_non_string_key.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
{1:1}
stdout --- 
<empty>
stderr --- 
error: expected entry or closed delimiter `}`, found `1`
 --> stdin:1:2
  |
1 | {1:1}
  | -^
  | |
  | expected due to `{`
